static/style.css
/*
|-----------------------------------------------------------
| || 1. BASE AND RESET STYLES
|-----------------------------------------------------------
*/

*,
*::before,
*::after {
    box-sizing: border-box;
}


html,
body {
    margin: 0;
    padding: 0;
    
    min-height: 100vh;
}


:root {
    --border-radius-lg: 25px;
    --border-radius-md: 10px;
    --border-radius-sm: 5px;

    /* Переменные для ТЕКСТА (теперь все управляем через переменные) */
    --font-family-base: 'Inter', sans-serif;
    --text-font-size: 1rem; /* Дефолтный размер */

    --font-size-xxl: calc(2.5 * var(--text-font-size));
    --font-size-xl: calc(2 * var(--text-font-size));
    --font-size-lg: calc(1.5 * var(--text-font-size));
    --font-size-md: calc(1.1 * var(--text-font-size));
    --font-size-sm: var(--text-font-size);

    --icon-edit: url("edit.png");
    --icon-login: url("login.png");
    --icon-logo: url("logo_long_white.svg");
    --icon-search: url("search.png");
    --icon-arrow: url("arrow_down.svg");

    --navbar-height: 60px;

    --neutral-1-color: #FFFFFF;
    --neutral-2-alpha: color-mix(in srgb, var(--neutral-2-color) 80%, transparent);
    --neutral-2-color: #E1E5F2;
    --neutral-3-color: #BFDBF7;
    --neutral-4-color: #6C7A89;
    --primary-color: #022B3A;
    --secondary-color: #1F7A8C;

    --button-height: 50px;

    --spacing-lg: 20px;
    --spacing-md: 16px;
    --spacing-sm: 8px;
    --spacing-xs: 4px;
}


body {
    display: flex;
    justify-content: center;

    line-height: 1.5;

    background-image: url(back1.jpg);
    color: var(--primary-color);
    font-family: var(--font-family-base);
}

/* Base Typography Styling */

h1, h2, h3, h4, p {
    margin: 0;

    color: inherit;
    font-family: var(--font-family-base);
}


h1 {
    font-size: var(--font-size-xxl);
    font-weight: 700;

    margin-bottom: var(--spacing-md);
    margin-left: var(--spacing-lg);
}


h2 {
    font-size: var(--font-size-xl);
    font-weight: 500;

    margin-bottom: var(--spacing-sm);
}


h3 {
    font-size: var(--font-size-lg);
    font-weight: 400;

    margin-bottom: var(--spacing-xs);
}


h4 {
    font-size: var(--font-size-md);
    font-weight: 400;

    margin-bottom: var(--spacing-xs);
}


p {
    font-size: var(--font-size-sm);
    margin-bottom: var(--spacing-md);
}


.fr-toggle {
    font-size: var(--font-size-sm);
    margin-top: 1rem;
    text-align: center;
}

a {
    color: var(--secondary-color);
    cursor: pointer;
    text-decoration: none;
    color: transparent;
}

label {
    display: block;
    text-align: left;

    font-size: var(--font-size-sm);
}


hr {
    border: none;
    
    padding-bottom: var(--spacing-lg);

    border-top: 1px solid var(--primary-color);
    margin: 0;
}

.fr-theme--dark {
    --neutral-1-color: #1c1c1e;
    --neutral-2-alpha: color-mix(in srgb, var(--neutral-2-color) 80%, transparent);
    --neutral-2-color: #2c2c2e;
    --neutral-3-color: #000000;
    --neutral-4-color: #6C7A89;
    --primary-color: #f5f5f7;
    --secondary-color: #3a3a3c;
}


.fr-hidden {
    display: none !important;
}

/*
|-----------------------------------------------------------
| || 2. LAYOUT AND CONTAINERS
|-----------------------------------------------------------
*/


.fr-container {
    position: relative;

    max-width: 900px;
    margin: 0 auto;
    padding: var(--spacing-lg);
    padding-top: calc(var(--navbar-height) + var(--spacing-lg));
    width: 80%;

    background: var(--neutral-2-alpha);
}

.fr-list {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-end;

    gap: 15px;
    padding: 15px 0;
}

.fr-list--centered {
    justify-content: center;
}

.fr-list--left {
    justify-content: flex-start;
}


.fr-user-nav-tabs {
    display: flex;

    gap: 10px;
    margin-bottom: 0;
    padding: var(--spacing-sm) 0;
}

/*
|-----------------------------------------------------------
| || 3. COMPONENTS: NAVBAR
|-----------------------------------------------------------
*/


.fr-navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;

    position: fixed;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    z-index: 100;

    max-width: 901px;
    height: var(--navbar-height);
    padding: 0 var(--spacing-md);
    width: 80%;

    background-color: var(--primary-color);
}


.fr-icon-button {
    display: flex;
    align-items: center;
    
    cursor: pointer;

    height: 40px;
    width: 40px;

    background-color: transparent;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
}

.fr-navbar__customize-btn {
    background-image: var(--icon-edit);
}


.fr-navbar__logo-btn {
    height: 50px;
    width: 150px;

    background-image: var(--icon-logo);
}


.fr-navbar__avatar-btn {
    background-image: var(--icon-login);
}

/*
|-----------------------------------------------------------
| || 4. COMPONENTS: BUTTONS AND LABELS
|-----------------------------------------------------------
*/


button, .fr-btn {
    display: flex;
    
    cursor: pointer;
    transition: background-color 0.2s, color 0.2s, border-color 0.2s;

    padding: 10px;

    background-color: transparent;
    border: transparent;
    border-radius: 50px;
    color: var(--primary-color);
}


.fr-btn--large {
    transition: background-color 0.2s, color 0.2s, border-color 0.2s;

    align-items: center;
    font-size: 1.2rem;
    height: var(--button-height);
    padding: 0px 30px;

    background-color: transparent;
    border: 2px solid var(--primary-color);
    color: var(--primary-color);
}

.fr-btn-right{
    margin-left: auto;
}

.fr-btn-centre{
    margin: 0 auto;
}

.fr-btn-bottom{
    position: absolute;
    bottom: 20px;
}

.fr-theme--white {
    border: 2px solid var(--neutral-1-color);
    color: var(--neutral-1-color);
}
/* ... */

